; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_diff-patch.c_get_rusage_time.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_diff-patch.c_get_rusage_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rusage = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { double, i32 }
%struct.TYPE_3__ = type { double, i32 }

@RUSAGE_SELF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (double ()* @get_rusage_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @get_rusage_time() #0 {
  %1 = alloca double, align 8
  %2 = alloca %struct.rusage, align 8
  %3 = load i32, i32* @RUSAGE_SELF, align 4
  %4 = call i64 @getrusage(i32 %3, %struct.rusage* %2)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store double 0.000000e+00, double* %1, align 8
  br label %25

7:                                                ; preds = %0
  %8 = getelementptr inbounds %struct.rusage, %struct.rusage* %2, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load double, double* %9, align 8
  %11 = getelementptr inbounds %struct.rusage, %struct.rusage* %2, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load double, double* %12, align 8
  %14 = fadd double %10, %13
  %15 = getelementptr inbounds %struct.rusage, %struct.rusage* %2, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = getelementptr inbounds %struct.rusage, %struct.rusage* %2, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = add nsw i32 %17, %20
  %22 = sitofp i32 %21 to double
  %23 = fmul double 0x3EB0C6F7A0B5ED8D, %22
  %24 = fadd double %14, %23
  store double %24, double* %1, align 8
  br label %25

25:                                               ; preds = %7, %6
  %26 = load double, double* %1, align 8
  ret double %26
}

declare dso_local i64 @getrusage(i32, %struct.rusage*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
